--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "engines": {
     "node":"20.14.0"
   },
-  "name": "wanderlust",
+  "name": "travelmate",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "vaibhav bhargav",
