--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node":"20.14.0"
+    "node": "20.14.0"
   },
   "name": "travelmate",
   "version": "1.0.0",
@@ -30,6 +30,7 @@
     "mongoose": "^8.6.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
